--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -142,7 +142,7 @@ K-1\}$. Let $\Sigma_K$ be the symmetric group on the set $\ubar{K}$.
 
 \begin{notation} We will call \emph{half edge} associated to a vertex $v$
 either a marked point on $v$ or half of an edge that connects $v$ to an
-other vertex. In this way stability condition can be rephrased in: for
+other vertex. In this way the stability condition can be rephrased in: for
 every vertex $v$ of genus $0$ there are at least $3$ half edges on it.
 An half edge is said to come from an edge if it is of the second type.
 \end{notation}
@@ -164,7 +164,7 @@ Our task is to generate one stable graph for each isomorphism class.
 
 
 
-\section{How the program generates graphs}
+\section{A description of our algorithm to generate stable graphs}
 
 In this section we describe the general ideas of our algorithm. Let us
 first introduce the notation we use in the program.
@@ -194,27 +194,41 @@ constitute a stable graph. In order, it generates the numbers $g_i$,
 then the numbers $n_i$, $l_i$ (the diagonal part of the matrix $a$),
 and finally, row by row, a symmetric matrix representing $a$.
 
-The program follows two principles: the first is to generate the
-smallest possible number of couples of isomorphic stable graphs, the
-second is to check the conditions of Definition~\ref{def:stable graph}
-as early as possible, to minimize the time spent in branches that do
-not lead to stable graphs.
+Finally, when the data have all been generated, we test that all the
+conditions of Definition~\ref{def:stable graph} hold, in particular
+that the graph is actually connected. Then we use the program Nauty
+\cite{nauty} to check if this graph is isomorphic to a previously
+generated graph. If this is not the case, we add the graph to the list
+of graphs of genus $G$ with $N$ marked points.
 
-To take into account the second principle, we will deduce from the
-conditions of Definition~\ref{def:stable graph} some other necessary
-conditions that can be checked before the graph is defined in its
-entirety. More precisely, every single datum is assigned trying all
-the possibilities within a range that depends upon the values of $G$
-and $N$, and upon the values of the data that have already been
-filled. The range is computed in such a way that assigning a value
-outside the range would not generate any stable graph; moreover, we
-tried to minimize the situations in which assigning a value inside the
-range would not generate any stable graph. We will describe in details the ranges in Section~\ref{sec:ranges}.
+%The program follows two principles: the first is to generate the
+%smallest possible number of couples of isomorphic stable graphs, the
+%second is to check the conditions of Definition~\ref{def:stable graph}
+%as early as possible, to minimize the time spent in branches that do
+%not lead to stable graphs.
 
-For the first principle, we generalize the following idea: to generate
-a vector for every class of vectors of length $K$ modulo permutations,
-the simplest way is to generate vectors whose entries are
-increasing. The program fills the data in the order shown in the matrix
+ %The range is computed in such a way that assigning a value
+%outside the range would not generate any stable graph; moreover, we
+%tried to minimize the situations in which assigning a value inside the
+%range would not generate any stable graph. 
+%We will describe in details the ranges in Section~\ref{sec:ranges}.
+
+%Now let us focus on \underline{the first principle}. 
+It is important to observe here that the entries of $g$,$n$,$l$, and $a$
+are bounded. A simple bound can be given for each entry of $g$ by the 
+number $G$, and for each entry of $n$ by the number $N$. For $l$ and
+$a$ bounds are obtained from $G$ using the condition on the total genus
+\ref{def:stable graph}. These bounds are coarse: Section \ref{sec:ranges}
+will be devoted to implement better bounds. Moreover, we will
+make these bounds dynamical: for instance assigning the value $g_1>0$
+clearly lowers the bound for $g_i, i>1$.
+
+The algorithm follows the following principle: we want to generate
+the smallest possible number of couples of isomorphic stable graphs.
+Here we generalize the idea that to generate a vector for every 
+class of vectors of length $K$ modulo permutations, the 
+simplest way is to generate vectors whose entries are increasing. 
+The program fills the data in the order shown in the matrix
 \begin{equation}\label{eq:big matrix}
   \begin{pmatrix}
     g_0 & g_1 & \cdots & g_{K-1}\\
@@ -227,49 +241,44 @@ increasing. The program fills the data in the order shown in the matrix
     a_{K-1,0} & \cdots & a_{K-1,K-2} & \bullet
   \end{pmatrix}\text{,}
 \end{equation}
-and generates only matrices whose columns are sorted. This requires a
+and generates only matrices whose columns are ordered. Loosely speaking,
+here we are ordering the columns lexicographically. This requires a
 bit of care, for two reasons:
 \begin{itemize}
 \item the first is that the matrix $a$ needs to be symmetric; in the
   program we generate only the strictly upper triangular part;
-\item the diagonal of $a$ need not to be considered when deciding if a
+\item the diagonal of $a$ need not be considered when deciding if a
   column is greater or equal than the previous one.
 \end{itemize}
-So, for example, denote with $c_j$ and $c_{j+1}$ two adjacent columns
-of the matrix~\ref{eq:big matrix}. They are said to be equal if
-$c_{j,i} = c_{j+1,i}$ for any $i \notin \{j, j+1\}$; if they are not
-equal, denote with $i_0$ the minimum index such that $i_0 \notin \{
-j+3, j+1+3\}$ and $c_{j,i_0} \neq c_{j+1,i_0}$. Then $c_j < c_{j+1}$
-if and only if $c_{j,i_0} < c_{j+1,i_0}$. We do not define the
-relation for non-adjacent columns.
 
-\begin{remark}
-  We cannot conclude immediately that this procedure gives us all
-  possible data up to permutations as in the case of a single
-  vector. This is because the transformation that the matrix undergo
-  when a permutation is applied is more complicated: for the first
-  three rows, it just permute the columns, but for the remaining rows,
-  it permutes both rows and columns. Indeed, to prove that generating
-  only sorted columns does not miss some stable graph we need to prove
-  Proposition~\ref{prop:main}, thing that we do in
-  Section~\ref{sec:proof}.
-\end{remark}
+We define a relation (``order'') for adjacent columns. 
+Let us call $c_j$ and $c_{j+1}$ two adjacent columns
+of the matrix~\ref{eq:big matrix}. They are said to be equivalent if
+$c_{j,i} = c_{j+1,i}$ for any $i \notin \{j+3, j+3+1\}$. If they are not
+equivalent, denote with $i_0$ the minimum index such that $i_0 \notin \{
+j+3, j+3+1\}$ and $c_{j,i_0} \neq c_{j+1,i_0}$. Then we define the  
+relation $c_j < c_{j+1}$ if and only if $c_{j,i_0} < c_{j+1,i_0}$. 
+We do not define the relation for non-adjacent columns.
+The data are ordered when the columns are weakly increasing, i.e.
+for all $j$, either $c_j$ is equivalent to $c_{j+1}$ or $c_j < c_{j+1}$.
 
-To ensure that the columns are sorted (in the sense we explained
+
+To ensure that the columns are ordered (in the sense we explained
 before), the program keeps track of \emph{divisions}. We start filling
-the genus vector $g$ in a non decreasing way, and every time we assign
-a value $g_i$ strictly greater than $g_{i-1}$ we put a division before
-$i$. This means that when we decide the value of a datum regarding
-index $i$, we can ignore the value of that datum for the index $i-1$,
-because the column $c_i$ is already bigger than the column
-$c_{i-1}$. Otherwise, if there is not a division before $i$, we would
-have been forced to put a value which is bigger or equal than the one
-in position $i-1$.
+the genus vector $g$ in a non decreasing way, and every time 
+a value $g_i$ strictly greater than $g_{i-1}$ is assigned, we put a 
+division before $i$. %This means that when we decide the value of a 
+%datum regarding index $i$, we can ignore the value of that datum for the index $i-1$,
+%because the column $c_i$ is already bigger than the column
+%$c_{i-1}$. Otherwise, if there is not a division before $i$, we would
+%have been forced to put a value which is bigger or equal than the one
+%in position $i-1$.
 
-Indeed, after completing $g$, we start filling the vector $n$ in such
+%Indeed, 
+After completing $g$, we start filling the vector $n$ in such
 a way that, within two divisions, it is non decreasing. Again we
 introduce a division before $i$ every time we assign a value $n_i$
-strictly bigger than $n_{i-1}$. We follow this procedure also for the
+strictly greater than $n_{i-1}$. We follow this procedure also for the
 vector $l$.
 
 Finally, we start filling the rows of the matrix $a$. Here the
@@ -291,16 +300,16 @@ that the value of $a_{i,j}$ is assigned starting from:
 and we put a division before $i$ if $a_{i,j} > a_{i-1,j}$ and a division
 before $j$ if $a_{i,j} > a_{i,j-1}$.
 
-Finally, when the matrix is fully filled, we test that all the
-conditions of Definition~\ref{def:stable graph} hold, in particular
-that the graph is actually connected. Then we use the program Nauty
-\cite{nauty} to check if this graph is isomorphic to a previously
-generated graph. If this is not the case, we add the graph to the list
-of graphs of genus $G$ with $N$ marked points.
-
-
-
-
+%\begin{remark}
+  We cannot conclude immediately that this procedure gives us all
+  possible data up to permutations as in the case of a single
+  vector. This is because the transformation that the matrix undergo
+  when a permutation is applied is more complicated: for the first
+  three rows, it just permute the columns, but for the remaining rows,
+  it permutes both rows and columns. Indeed, to prove that the procedure
+  of generating only ordered columns does not miss any stable graph 
+  is the content of the following section.
+%\end{remark}
 \section{The program generates all graphs}\label{sec:proof}
 
 We want to prove the following result.
@@ -317,13 +326,13 @@ class of graphs with $K$ vertices.
 We can assume that the graphs generated by the algorithm are connected
 and stable, since we explicitly check these conditions for each graph.
 
-Moreover, in the previous section we proved that all the constraints
-we put on $g$, $n$, $l$, $a$ (apart from the one coming from
-divisions) are justified by the fact if we assign a value outside
-those constraints, the graph we obtain has no hope of becoming stable
-once completed. As a consequence, for simplicity we can prove
-Proposition~\ref{prop:main} assuming that the algorithm uses only the
-divisions constraints.
+%Moreover, in the previous section we proved that all the constraints
+%we put on $g$, $n$, $l$, $a$ (apart from the one coming from
+%divisions) are justified by the fact if we assign a value outside
+%those constraints, the graph we obtain has no hope of becoming stable
+%once completed. As a consequence, for simplicity we can prove
+%Proposition~\ref{prop:main} assuming that the algorithm uses only the
+%divisions constraints.
 
 \begin{notation}
   We have seen previously that we can encode the data of a stable
@@ -660,12 +669,24 @@ arguing as in the following example.
   \]
   is finite.
 \end{proof}
+
+
+
 \section{Description of the ranges}\label{sec:ranges}
 
 In the previous section we have introduced the algorithm, by
 describing the divisions. In this section we introduce accurate ranges
 for the possible values of $g,n,l$ and $a$. In particular we try to
 obtain estimates on the upper extremum for each datum to be filled.
+
+We will deduce from the
+conditions of Definition~\ref{def:stable graph} some other necessary
+conditions that can be checked before the graph is defined in its
+entirety. More precisely, every single datum is assigned trying all
+the possibilities within a range that depends upon the values of $G$
+and $N$, and upon the values of the data that have already been
+filled.
+
 
 \begin{notation}
   At any time during the algorithm, we let $e^{\MAX}$ be the maximum
